front end auth testing, websocket testing
- finalizing websocket implementation, will begin cookie authentication testing once complete
- testing front end authentication

--- a/frontend/src/frontend/template/index.html
+++ b/frontend/src/frontend/template/index.html
@@ -1,5 +1,5 @@
 <script type="text/javascript">
-  const ws = new WebSocket(`ws://${location.host}/ws`);
+  const ws = new WebSocket(`ws://45.63.53.182:30000/ws`);
   
   ws.addEventListener('message', function (event) {
       const li = document.createElement("li");
