cleanup, websocket implementation working

--- a/frontend/src/frontend/templates/about_netifidash.html
+++ b/frontend/src/frontend/templates/about_netifidash.html
@@ -4,7 +4,7 @@
   
   <div class="jumbotron text-center">
     <h1>NetifiDash</h1> 
-    <h2>NOC Dashboard, AI Powered Threat Monitoring & Network Automation for Ubiiquiti UniFi</h2>
+    <h2>NOC Dashboard, AI Powered Threat Monitoring & Network Automation for Ubiquiti UniFi</h2>
   </div>
 
   <!-- Container (About Section) -->
@@ -13,7 +13,7 @@
       <div class="col-sm-8">
         <h2>Why NetifiDash?</h2><br>
         <h4></h4><br>
-        <p>Built on top of UbiquiPy, the UniFi Automation Framework, NetifiDash provides Network Administrators and System Administrator greater visibility into UniFi Network deploymnt</p>
+        <p>Built on top of UbiquiPy, the UniFi Automation Framework, NetifiDash provides UniFi Administrators greater visibility into UniFi Network deploymnt</p>
       </div>
       <div class="col-sm-4">
 
@@ -38,6 +38,7 @@
       <div class="col-sm-6">
         <h4>Upcoming Features</h4>
         <ul class="list-group">
+          <li class="list-group-item">Protect & Access Automation Modules</li>
           <li class="list-group-item">AI powered Threat Monitoring</li>
           <li class="list-group-item">Full NOC Dashboard</li>
           <li class="list-group-item">SSO with Ubiqui Accounts</li>
