--- a/frontend/src/frontend/templates/index.html
+++ b/frontend/src/frontend/templates/index.html
@@ -1,223 +1,18 @@
-<!doctype html>
-<html lang="en">
-  <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+{% extends 'base.html' %}
 
-    <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+{% block content %}
 
-    <title>NetiFiDash NOC Tool</title>
-  </head>
-  <body>
-    <ul class="nav nav-tabs justify-content-center" id="myTab" role="tablist">
-      <li class="nav-item" role="presentation">
-        <button class="nav-link active" id="event-tab" data-bs-toggle="tab" data-bs-target="#event" type="button" role="tab" aria-controls="event" aria-selected="true">Network Events</button>
-      </li>
-      <li class="nav-item" role="presentation">
-        <button class="nav-link" id="alarm-tab" data-bs-toggle="tab" data-bs-target="#alarm" type="button" role="tab" aria-controls="alarm" aria-selected="false">Network Alarms</button>
-      </li>
-      <li class="nav-item" role="presentation">
-        <button class="nav-link" id="site-dpi-tab" data-bs-toggle="tab" data-bs-target="#sites" type="button" role="tab" aria-controls="sites" aria-selected="false">Site(s) DPI Stats</button>
-      </li>
-      <li class="nav-item" role="presentation">
-        <button class="nav-link" id="client-dpi-tab" data-bs-toggle="tab" data-bs-target="#clients" type="button" role="tab" aria-controls="clients" aria-selected="false">Client(s) DPI Stats</button>
-      </li>
-    </ul>
-    <div class="tab-content" id="myTabContent">
-      <div class="tab-pane fade show active" id="event" role="tabpanel" aria-labelledby="event-tab">
-        <div class="container">
-          <div class="row">
-            <div class="col-4"></div>
-            <div class="col-4">
-    
-              <h1>Network Events</h1>
-    
-              <ul id="events_list" style="flex-grow: 1; list-style-type: none"></ul>
-    
-              <br>
-    
-              <form onsubmit="return send(event)">
-                <input type="text" name="message" minlength="1" />
-                <button type="submit">Send</button>
-              </form>
+<p>{% block title %} NetiFiDash Home Page {% endblock %}</p>
+    <div class="container">
+      <div class="row">
+        <div class="col-4"></div>
+        <div class="col-4 text-center">
 
-              <p id="error_display"></p>
-    
-            </div>
-            <div class="col-4"></div>
-    
-          </div>
         </div>
-      </div>
-
-      <div class="tab-pane fade" id="alarm" role="tabpanel" aria-labelledby="alarm-tab">
-
-        <div class="container">
-          <div class="row">
-            <div class="col-4"></div>
-            <div class="col-4">
-    
-              <h1>Network Alarms</h1>
-    
-              <ul id="alarms_list" style="flex-grow: 1; list-style-type: none"></ul>
-    
-              <br>
-    
-              <form onsubmit="return send(event)">
-                <input type="text" name="message" minlength="1" />
-                <button type="submit">Send</button>
-              </form>
-
-              <p id="error_display"></p>
-    
-            </div>
-            <div class="col-4"></div>
-    
-          </div>
-        </div>
-
-      </div>
-
-      <div class="tab-pane fade" id="sites" role="tabpanel" aria-labelledby="site-dpi-tab">
-
-        <div class="container">
-          <div class="row">
-            <div class="col-4"></div>
-            <div class="col-4">
-    
-              <h1>DPI Stats for all Sites</h1>
-    
-              <ul id="sites_list" style="flex-grow: 1; list-style-type: none"></ul>
-    
-              <br>
-    
-              <form onsubmit="return send(event)">
-                <input type="text" name="message" minlength="1" />
-                <button type="submit">Send</button>
-              </form>
-
-              <p id="error_display"></p>
-    
-            </div>
-            <div class="col-4"></div>
-    
-          </div>
-        </div>
-
-      </div>
-
-      <div class="tab-pane fade" id="clients" role="tabpanel" aria-labelledby="client-dpi-tab">
-
-        <div class="container">
-          <div class="row">
-            <div class="col-4"></div>
-            <div class="col-4">
-    
-              <h1>DPI Stats for all Clients</h1>
-    
-              <ul id="clients_list" style="flex-grow: 1; list-style-type: none"></ul>
-    
-              <br>
-    
-              <form onsubmit="return send(event)">
-                <input type="text" name="message" minlength="1" />
-                <button type="submit">Send</button>
-              </form>
-
-              <p id="error_display"></p>
-    
-            </div>
-            <div class="col-4"></div>
-    
-          </div>
-        </div>
+        <div class="col-4"></div>
 
       </div>
     </div>
 
-    
-
-    
-
-    <!-- Optional JavaScript; choose one of the two! -->
-
-    <!-- Option 1: Bootstrap Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-
-    <!-- Option 2: Separate Popper and Bootstrap JS -->
-    <!--
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
-    -->
-  </body>
-</html>
-
-
-<script type="text/javascript">
-  try {
-    const ws = new WebSocket(`ws://45.63.53.182:30000/ws`);
-    const error_display = document.getElementById("error_display");
-    error_display.innerHTML="";
-  
-    ws.addEventListener('message', function (event) {
-      json = JSON.parse(event.data);
-      if ("unifi_event" in json)
-      {
-        const li = document.createElement("li");
-        const li_2 = document.createElement("li");
-        li.appendChild(document.createTextNode(json.unifi_event));
-        li_2.appendChild(document.createTextNode('message'));
-        document.getElementById("events_list").appendChild(li);
-        document.getElementById("events_list").appendChild(li_2);
-
-      } else if ("unifi_alarm" in json) 
-      {
-        const li = document.createElement("li");
-        const li_2 = document.createElement("li");
-        li.appendChild(document.createTextNode(json.unifi_alarm));
-        li_2.appendChild(document.createTextNode('message'));
-        document.getElementById("alarms_list").appendChild(li);
-        document.getElementById("alarms_list").appendChild(li_2);
-
-      } else if ("site_dpi" in json) 
-      {
-        const li = document.createElement("li");
-        const li_2 = document.createElement("li");
-        li.appendChild(document.createTextNode(json.site_dpi));
-        li_2.appendChild(document.createTextNode('message'));
-        document.getElementById("sites_list").appendChild(li);
-        document.getElementById("sites_list").appendChild(li_2);
-
-      } else if ("sta_dpi" in json) 
-      {
-        const li = document.createElement("li");
-        const li_2 = document.createElement("li");
-        li.appendChild(document.createTextNode(json.sta_dpi));
-        li_2.appendChild(document.createTextNode('message'));
-        document.getElementById("clients_list").appendChild(li);
-        document.getElementById("clients_list").appendChild(li_2);
-
-      }
-      
-    });
-
-    
-  } catch (error) {
-
-    error_display.innerHTML = "Error: " + error;
-    
-  }
-  
-  
-  function send(event) {
-    const message = (new FormData(event.target)).get("message");
-    if (message) {
-      ws.send(message);
-    }
-    event.target.reset();
-    return false;
-  }
-</script>
+{% endblock %}
 
