front end update

--- a/frontend/src/frontend/templates/about.html
+++ b/frontend/src/frontend/templates/about.html
@@ -1,6 +1,8 @@
 {% extends 'base.html' %}
 
 {% block content %}
+
+  <title>{% block title %} About NetiFiDash {% endblock %}</title>
   
   <div class="jumbotron text-center">
     <h1>NetifiDash</h1> 
