--- a/frontend/src/frontend/templates/index.html
+++ b/frontend/src/frontend/templates/index.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 
-<p>{% block title %} NetiFiDash Home Page {% endblock %}</p>
+<title>{% block title %} NetiFiDash Home Page {% endblock %}</title>
     <div class="container">
       <div class="row">
         <div class="col-4"></div>
