--- a/frontend/src/frontend/templates/web_app.html
+++ b/frontend/src/frontend/templates/web_app.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 
-<p>{% block title %} NetiFiDash NOC Web App {% endblock %}</p>
+<title>{% block title %} NetiFiDash NOC Web App {% endblock %}</title>
 
 <div class="container">
   <div class="row">
