--- a/frontend/src/frontend/templates/index.html
+++ b/frontend/src/frontend/templates/index.html
@@ -1,16 +1,52 @@
 {% extends 'base.html' %}
 
 {% block content %}
-
-<title>{% block title %} NetiFiDash Home Page {% endblock %}</title>
     <div class="container">
       <div class="row">
-        <div class="col-4"></div>
-        <div class="col-4 text-center">
+        <div class="col-12">
+          <title>{% block title %} NetiFiDash Home {% endblock %}</title>
+  
+          <div class="jumbotron text-center">
+            <h1>NetifiDash</h1> 
+            <h2>NOC Dashboard, AI Powered Threat Monitoring & Network Automation for Ubiiquiti UniFi</h2>
+          </div>
 
+          <!-- Container (About Section) -->
+          <div id="about" class="container-fluid">
+            <div class="row">
+              <div class="col-sm-12 text-center">
+                <h2>Why NetifiDash?</h2><br>
+                <h4></h4><br>
+                <p>Built on top of UbiquiPy, the UniFi Automation Framework, NetifiDash provides Network Administrators and System Administrator greater visibility into UniFi Network deploymnt</p>
+              </div>
+            </div>
+          </div>
+
+          <!-- Container (Services Section) -->
+          <div id="services" class="container-fluid text-center">
+            <h2>Current Features</h2>
+            <p>Currently Under Development</p>
+            <br>
+            <div class="row slideanim">
+              <div class="col-sm-6">
+                <h4>Current Features</h4>
+                <ul class="list-group">
+                  <li class="list-group-item">Realtime Alerts Event & System Alerts</li>
+                  <li class="list-group-item">Full access to UniFi management & automation features via UbiquiPy integration</li>
+                </ul>
+      
+              </div>
+              <div class="col-sm-6">
+                <h4>Upcoming Features</h4>
+                <ul class="list-group">
+                  <li class="list-group-item">AI powered Threat Monitoring</li>
+                  <li class="list-group-item">Full NOC Dashboard</li>
+                  <li class="list-group-item">SSO with Ubiqui Accounts</li>
+                </ul>
+              </div>
+            </div>
+          </div>
         </div>
-        <div class="col-4"></div>
-
       </div>
     </div>
 
