--- a/frontend/src/frontend/templates/index.html
+++ b/frontend/src/frontend/templates/index.html
@@ -27,7 +27,7 @@
             <h2>Current Features</h2>
             <p>Currently Under Development</p>
             <br>
-            <div class="row slideanim">
+            <div class="row">
               <div class="col-sm-6">
                 <h4>Current Features</h4>
                 <ul class="list-group">
