--- a/backend/src/backend/templates/web_app.html
+++ b/backend/src/backend/templates/web_app.html
@@ -10,6 +10,9 @@
 
       <ul class="nav nav-tabs justify-content-center" id="myTab" role="tablist">
         <li class="nav-item" role="presentation">
+          <button class="nav-link" id="inference-tab" data-bs-toggle="tab" data-bs-target="#inference" type="button" role="tab" aria-controls="inference" aria-selected="false">Packet Data Analysis</button>
+        </li>
+        <li class="nav-item" role="presentation">
           <button class="nav-link active" id="event-tab" data-bs-toggle="tab" data-bs-target="#event" type="button" role="tab" aria-controls="event" aria-selected="true">Network Events</button>
         </li>
         <li class="nav-item" role="presentation">
@@ -21,9 +24,34 @@
         <li class="nav-item" role="presentation">
           <button class="nav-link" id="client-dpi-tab" data-bs-toggle="tab" data-bs-target="#clients" type="button" role="tab" aria-controls="clients" aria-selected="false">Client(s) DPI Stats</button>
         </li>
+
       </ul>
       <div class="tab-content" id="myTabContent">
-        <div class="tab-pane fade show active" id="event" role="tabpanel" aria-labelledby="event-tab">
+        <div class="tab-pane fade show active" id="inference" role="tabpanel" aria-labelledby="inference-tab">
+          <div class="container">
+            <div class="row">
+              <div class="col-4"></div>
+              <div class="col-4">
+      
+                <h1>Packet Data Analysis</h1>
+
+                <div class="container mt-5">
+                  <h2 class="text-center">Upload CSV File</h2>
+                  <form id="csvUploadForm" action="/upload_csv" method="post" enctype="multipart/form-data" class="mt-4">
+                      <div class="form-group">
+                          <label for="csvFile">Select CSV file:</label>
+                          <input type="file" class="form-control-file" id="csvFile" name="csv_file" accept=".csv" required>
+                      </div>
+                      <button type="submit" class="btn btn-primary">Upload</button>
+                  </form>
+                </div>
+              </div>
+              <div class="col-4"></div>
+      
+            </div>
+          </div>
+        </div>
+        <div class="tab-pane fade" id="event" role="tabpanel" aria-labelledby="event-tab">
           <div class="container">
             <div class="row">
               <div class="col-4"></div>
