cleanup, web app update

--- a/backend/templates/404.html
+++ b/backend/templates/404.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 
-<p>{% block title %} NetiFiDash Demo 404 Error {% endblock %}</p>
+<p>{% block title %} netsumap 404 Error {% endblock %}</p>
 
 <div class="container">
   <div class="row">
@@ -12,17 +12,17 @@
       <h1>404 ERROR</h1>
       <h2>You've reached a page that doesnt exist on this domain.</h2>
       
-      <a class="btn btn-primary" href="{{ url_for('index') }}">Go To NetiFiDash Home</a>
+      <a class="btn btn-primary" href="{{ url_for('index') }}">Go To netsumap Home</a>
 
       <br>
       <br>
 
-      <a class="btn btn-primary" href="{{ url_for('app_main') }}">Try NetiFiDash For Yourself</a>
+      <a class="btn btn-primary" href="{{ url_for('app_main') }}">netsumap Dashboard</a>
 
       <br>
       <br>
 
-      <a class="btn btn-primary" href="https://www.baughcl.com/">Learn About The Devs</a>
+      <a class="btn btn-primary" href="https://www.baughcl.com/">About The Dev</a>
       
 
     </div>
