--- a/backend/templates/web_app.html
+++ b/backend/templates/web_app.html
@@ -52,6 +52,7 @@
                   <input type="text" name="message" minlength="1" />
                   <button type="submit">Connect</button>
                 </form>
+                <p id="ws_name_display"></p>
               </div>
       
             </div>
