--- a/core-node/templates/web_app.html
+++ b/core-node/templates/web_app.html
@@ -54,6 +54,11 @@
                 </form>
                 <p id="ws_name_display"></p>
               </div>
+              <div class="col-4">
+                <h2 class="text-center">App Process Error Msgs</h2>
+                <p id="status_display"></p>
+                <p id="error_msg_display"></p>
+              </div>
       
             </div>
           </div>
