--- a/core-node/templates/base.html
+++ b/core-node/templates/base.html
@@ -246,7 +246,7 @@
           const ws_name_display = document.getElementById("ws_name_display");
           const status_display = document.getElementById("status_display");
           const err_display = document.getElementById("error_msg_display");
-          const ws = null;
+          let ws;
 
           status_display.innerHTML='Enter Websocket IP/Hostname:Port'
 
@@ -259,7 +259,7 @@
 
         const error_display = document.getElementById("error_display");
         
-        if(ws){
+        if(!ws === undefined || !ws === null){
 
               ws.addEventListener('message', function (event) {
               json = JSON.parse(event.data);
